trabalhando com bordas

--- a/index.html
+++ b/index.html
@@ -190,9 +190,11 @@
             </div>
 
             <div class="abavendas">
+                
 
-                <p class="solid2"> <label>Celular mais vendido</label>  </p>
-                <p class="solid2"> <label>Informática mais vendido</label>  </p>
+
+                <p class="solid2"> <label>Celular mais vendido </label> </p>
+                <p class="solid2"> <label>Informática mais vendido</label>  
                 <p class="solid2"> <label>Game mais vendido</label>  </p>
 
             </div>
@@ -269,8 +271,16 @@
 
 
 
+                
 
 
+            </div>
+
+            <div class="abavendas">
+
+                <p class="solid2"> <label>Celular mais vendido </label> </p>
+                <p class="solid2"> <label>Informática mais vendido</label>  
+                <p class="solid2"> <label>Game mais vendido</label>  </p>
 
             </div>
 
