concluindo seçao depoimentos

--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@
             </div>
 
             <div class="depoimentos">
+                <img src="img/pessoa.jpg" class="figure4" alt="figurapessoa" >
+                            <div class="textcentro" >
+                                <h6>Nome da pessoa </h6>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit nibh, efficitur eu lectus in, suscipit feugiat erat. </p>
 
 
 
