Concluindo parte da responsividade

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
             <div class="teste" ;>
                 
-                <nav class="abaprodutos" align="center">
+                <nav class="abaprodutos">
                     <a class="abaprodutos" href="celulares.html">Celulares</a>
                     <a class="abaprodutos" href="games.html">Games</a>
                     <a class="abaprodutos" href="informatica.html">Informática</a>
-                    <a class="abaprodutos" href="contato.html">Contato</a>
+                    <a class="abaprodutos" href="contato.html"><label>Contato</a>
 
                 </nav>  
                 
