trabalhando responsividade celular

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="col-4" ;>
                        <br> <h1>GAME MANIA</h1>
                     </div>
-                    <div class="col-4" ;>
+                    <div class="col-4" id="busca">
                         
                        <br> <p class="inset" ><input type="search" id="buscador" placeholder="Digite aqui para pesquisar..."> </p> <img src="img/search3.png" class="lupa" alt="lupa">
                          
