--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
                                 <nav class="botao">
 
-                                    <a class="textcomprar" href="carrinho.html"><p>comprar</p></a>
+                                    <a class="textcomprar" href="carrinho.html"><h6>comprar</h6></a>
 
                                 </nav>
                                 
