testando posicionamento das classes

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             <img src="https://cdn.pixabay.com/photo/2014/09/24/14/29/macbook-459196_960_720.jpg" class="figure2" alt="capa" >
                             <div class="textcentro"><br>
 
-                                <p>computador para trabalho </p>
+                                <p>notebook lançamento</p>
                                 <p>R$2000,00 </p>
                                 <p>Até 10x de R$200,00 sem juros </p><br>
 
@@ -485,7 +485,7 @@
                             <img src="img/celular.jpg" class="figure3" alt="figuracelular2" >
                             <div class="textcentro" ><br>
 
-                                <p>celular lançamento </p>
+                                <p>celular basic </p>
                                 <p>R$1500,00 </p>
                                 <p>Até 10x de R$150,00 sem juros </p><br>
 
