--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Game Mania, Venda de Jogos e Produtos Eletrônicos" />
         <meta name="keywords" content="Games, Informática, Técnologia" />
         <meta name="author" content="Leandro Aguiar" />
-        <meta name="viewport" content="width=device-width", initial-scale="1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="css/style.css" >
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -614,23 +614,24 @@
                         </div>
 
                         <div class="col-4">
-                            <br> <h3>contato</h3>
+                            <br><h3>contato</h3>
                             <nav class="links" >
                                 <p>telefone : xxxxxxx</p>
                                 <p>endereço : xxxxxxx</p>
                                 <p>localização : xxxxxxx</p>
+                            </nav>
 
 
 
                         </div>
 
                         <div class="col-4">
-                            <br> <h3>social</h3>
+                            <br><h3>social</h3>
                             <nav class="links" >
                               <a class="links" href="#"><img src="img/facebook.png" class="figure5" alt="logofacebook" <p>Facebook Game Mania </p> </a>
                               <a class="links" href="#"><img src="img/instagram.png" class="figure5" alt="logoinstagram" <p>Instagram Game Mania </p> </a>
 
-
+                            </nav>
 
                         </div>
 
