--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="css/style_login.css" >
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <script src="css/script.js" defer ></script>
+        <script src="css/script_login.js" defer ></script>
         <script src="jquery-3.6.1.min.js" ></script>
     </head>
     <body>
@@ -19,7 +19,7 @@
             <div class="container-fluid " id="headgame">
                 <div class="row">
                     <div class="col-4" ;>
-                       <br> <h1>GAME MANIA</h1>
+                       <br> <a class="home" href="index.html"><h1>GAME MANIA</h1></a>
                     </div>
                     <div class="col-4" id="busca">
                         
@@ -82,10 +82,10 @@
 
                     <form>
                         <label for="email">email</label>
-                        <input type="text" id="email"><br><br>
+                        <input type="text" id="email" required autocomplete><br><br>
                         <label for="senha">senha</label>
-                        <input type="password" id="senha"><br><br>
-                        <input type="submit" id="btn-enviar" name="btn-enviar" required><br><br>
+                        <input type="password" id="senha" required autocomplete><br><br>
+                        <input type="submit" id="btn-enviar" onclick ="btenviar()" name="btn-enviar" required><br><br>
                         <p>ou</p>
                         <a class="cadastro" href="#">cadastre-se</a>
                         
