ajustando login para celular

--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                          
                     </div>
 
-                    <div class="col-4" id="cadcompr" ;>
+                    <div class="col-4" id="cadcompr" >
 
                         <nav class="login" >
                            <br> <a class="login" href="login.html">login</a>
